fix: fix bug on text overflows image

--- a/meme_generator/static/css/style.css
+++ b/meme_generator/static/css/style.css
@@ -3,6 +3,8 @@
     position: relative;
     text-align: center;
     color: white;
+    width: max-content;
+    overflow: hidden;
   }
 
 /* Centered text */
@@ -32,7 +34,4 @@
     0px -2px 0 #000,
     -2px 0px 0 #000,
     2px 2px 5px #000;
-    overflow :hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
 }
